--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_main"
-    tools:context=".pages.LauncherActivity">
+    tools:context=".activity.LauncherActivity">
 
     <ImageView
         android:layout_width="70dp"
@@ -47,6 +47,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <com.cvilia.netease.view.PrivacyCheckboxView
+            android:id="@+id/checkBox"
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:padding="8dp" />
