--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,9 +6,58 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
+    android:paddingTop="10dp"
     tools:context=".activity.login.LoginActivity">
 
-    <include layout="@layout/normal_actionbar" />
 
+    <include
+        android:id="@+id/actionBar"
+        layout="@layout/normal_actionbar" />
+
+    <TextView
+        android:id="@+id/loginTypeTv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:text="@string/login_by_phone"
+        android:textColor="@color/black"
+        android:textSize="18sp" />
+
+    <com.cvilia.netease.view.UnderLineEditText
+        android:id="@+id/accountEt"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="30dp"
+        android:background="@null"
+        android:hint="@string/please_input_phone"
+        android:textColor="@color/black"
+        android:textColorHint="@color/hint_c1c1c1"
+        android:textSize="14sp" />
+
+    <com.cvilia.netease.view.UnderLineEditText
+        android:id="@+id/passwordEt"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="30dp"
+        android:background="@null"
+        android:hint="@string/please_input_password"
+        android:inputType="textPassword"
+        android:textColor="@color/black"
+        android:textColorHint="@color/hint_c1c1c1"
+        android:textSize="14sp" />
+
+    <Button
+        android:id="@+id/loginBtn"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/normal_red_round"
+        android:text="@string/login"
+        android:textColor="@color/white"
+        android:textSize="16sp" />
 
 </LinearLayout>
