--- a/app/src/main/res/layout/normal_actionbar.xml
+++ b/app/src/main/res/layout/normal_actionbar.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="60dp"
     android:background="@color/white"
     android:paddingHorizontal="15dp"
     android:gravity="center_vertical">
     <ImageView
         android:id="@+id/backIv"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:src="@mipmap/icon_back"
         android:layout_centerVertical="true"/>
 
@@ -16,10 +16,10 @@
         android:id="@+id/titleTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:layout_toRightOf="@id/backIv"
-        android:layout_marginLeft="10dp"
-        android:text="网易云音乐"
+        android:textSize="16sp"
+        android:layout_toEndOf="@id/backIv"
+        android:layout_marginStart="15dp"
+        android:text="@string/app_name"
         android:layout_centerVertical="true"
         android:textColor="@color/black"
         />
