--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="divider_dadada">#dadada</color>
 
     <color name="hint_c1c1c1">#c1c1c1</color>
+
+    <color name="text_1d1d1d">#1d1d1d</color>
 </resources>
