--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,8 @@
     <color name="hint_c1c1c1">#c1c1c1</color>
 
     <color name="text_1d1d1d">#1d1d1d</color>
+    <color name="text_323232">#323232</color>
+    <color name="text_7c7c7c">#7c7c7c</color>
+
+    <color name="bg_f8f8f8">#f8f8f8</color>
 </resources>
