--- a/app/src/main/res/layout/tab_item.xml
+++ b/app/src/main/res/layout/tab_item.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="30dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center">
 
     <TextView
         android:id="@+id/tabTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="我的"
-        android:textColor="@color/black"
-        android:textSize="15sp" />
+        android:textColor="@drawable/tab_selector"
+        android:textSize="14sp"
+        style=""/>
 
 </LinearLayout>
