--- a/app/src/main/res/drawable/tab_selector.xml
+++ b/app/src/main/res/drawable/tab_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true" android:color="@color/black"  />
-    <item android:state_focused="true" android:color="@color/black" />
-    <item android:state_pressed="true" android:color="@color/black" />
-    <item android:color="@color/hint_c1c1c1" />
+    <item android:state_selected="true" android:color="@color/text_323232"  />
+    <item android:state_focused="true" android:color="@color/text_323232" />
+    <item android:state_pressed="true" android:color="@color/text_323232" />
+    <item android:color="@color/text_7c7c7c" />
 </selector>
