--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="text_7c7c7c">#7c7c7c</color>
 
     <color name="bg_f8f8f8">#f8f8f8</color>
+    <color name="bg_adadad">#adadad</color>
+    <color name="bg_ececec">#ececec</color>
 </resources>
