--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_f8f8f8"
+    android:background="@color/bg_ececec"
     android:orientation="vertical"
     android:paddingTop="10dp"
     tools:context=".activity.main.MainActivity">
