--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -8,4 +8,11 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_marginHorizontal">10dp</item>
     </style>
+
+    <style name="VipLevelTextView">
+        <item name="android:textSize">10sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingHorizontal">5dp</item>
+    </style>
 </resources>
