--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,4 +44,11 @@
         <item name="android:backgroundDimEnabled">true</item>
     </style>
 
+    <style name="VipLevelTextView">
+        <item name="android:textSize">10sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingHorizontal">5dp</item>
+    </style>
+
 </resources>
