--- a/app/src/main/res/drawable-anydpi/icon_left.xml
+++ b/app/src/main/res/drawable-anydpi/icon_left.xml
@@ -3,9 +3,14 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#2C2C2C"
+    android:tint="#545454"
     android:alpha="0.8">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M15.41,16.59L10.83,12l4.58,-4.59L14,6l-6,6 6,6 1.41,-1.41z"/>
+  <group android:scaleX="2"
+      android:scaleY="2"
+      android:translateX="-11"
+      android:translateY="-12">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M14.71,15.88L10.83,12l3.88,-3.88c0.39,-0.39 0.39,-1.02 0,-1.41 -0.39,-0.39 -1.02,-0.39 -1.41,0L8.71,11.3c-0.39,0.39 -0.39,1.02 0,1.41l4.59,4.59c0.39,0.39 1.02,0.39 1.41,0 0.38,-0.39 0.39,-1.03 0,-1.42z"/>
+  </group>
 </vector>
