--- a/app/src/main/res/drawable-anydpi/icon_micro.xml
+++ b/app/src/main/res/drawable-anydpi/icon_micro.xml
@@ -3,9 +3,14 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#2C2C2C"
+    android:tint="#545454"
     android:alpha="0.8">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M12,14c1.66,0 2.99,-1.34 2.99,-3L15,5c0,-1.66 -1.34,-3 -3,-3S9,3.34 9,5v6c0,1.66 1.34,3 3,3zM17.3,11c0,3 -2.54,5.1 -5.3,5.1S6.7,14 6.7,11L5,11c0,3.41 2.72,6.23 6,6.72L11,21h2v-3.28c3.28,-0.48 6,-3.3 6,-6.72h-1.7z"/>
+  <group android:scaleX="1.2631578"
+      android:scaleY="1.2631578"
+      android:translateX="-3.1578948"
+      android:translateY="-3.7894738">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M12,15c1.66,0 2.99,-1.34 2.99,-3L15,6c0,-1.66 -1.34,-3 -3,-3S9,4.34 9,6v6c0,1.66 1.34,3 3,3zM18.08,12c-0.42,0 -0.77,0.3 -0.83,0.71 -0.37,2.61 -2.72,4.39 -5.25,4.39s-4.88,-1.77 -5.25,-4.39c-0.06,-0.41 -0.42,-0.71 -0.83,-0.71 -0.52,0 -0.92,0.46 -0.85,0.97 0.46,2.97 2.96,5.3 5.93,5.75L11,21c0,0.55 0.45,1 1,1s1,-0.45 1,-1v-2.28c2.96,-0.43 5.47,-2.78 5.93,-5.75 0.07,-0.51 -0.33,-0.97 -0.85,-0.97z"/>
+  </group>
 </vector>
