--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,9 @@
     <RelativeLayout
         android:id="@+id/actionBar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:background="@color/white"
-        android:paddingHorizontal="10dp"
+        android:paddingHorizontal="15dp"
         app:layout_constraintBottom_toTopOf="@id/viewPager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,8 +25,8 @@
 
         <ImageView
             android:id="@+id/leftIv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_centerVertical="true"
             android:src="@drawable/icon_menu" />
 
@@ -39,8 +39,8 @@
 
         <ImageView
             android:id="@+id/rightIv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:src="@drawable/icon_micro" />
@@ -81,7 +81,7 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -89,8 +89,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/playInfoRl"
         app:tabIndicator="@null"
-        app:tabSelectedTextColor="@color/black"
-        app:tabTextColor="@color/text_1d1d1d" />
+        app:tabGravity="fill"
+        app:tabBackground="@color/app_transparent"
+        app:tabRippleColor="@color/app_transparent"
+        app:tabMode="fixed"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
