补充登录页手机号登陆逻辑，修改首页代码逻辑

--- a/app/src/main/res/layout/tab_item.xml
+++ b/app/src/main/res/layout/tab_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginBottom="5dp"
-        android:src="@drawable/icon_my" />
+        android:src="@drawable/selected_my" />
 
     <TextView
         android:id="@+id/tabTv"
