--- a/app/src/main/res/layout/tab_item.xml
+++ b/app/src/main/res/layout/tab_item.xml
@@ -6,18 +6,18 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/tabItemIv"
+        android:id="@+id/tabImg"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginBottom="5dp"
-        android:src="@drawable/selected_my" />
+        android:layout_gravity="center"/>
 
     <TextView
-        android:id="@+id/tabTv"
+        android:id="@+id/tabTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/my"
-        android:textColor="@drawable/tab_selector"
+        android:textColor="@drawable/main_tab_text_color"
         android:textSize="14sp" />
 
 </LinearLayout>
