--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,40 +16,11 @@
         android:background="@color/bg_ececec"
         android:fitsSystemWindows="true">
 
-        <RelativeLayout
-            android:id="@+id/actionBar"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:background="@color/white"
-            android:paddingHorizontal="15dp"
-            app:layout_constraintBottom_toTopOf="@id/viewPager"
-            app:layout_constraintEnd_toEndOf="parent"
+        <include android:id="@+id/actionbar"
+            layout="@layout/actionbar_layout"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/leftIv"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_centerVertical="true"
-                android:src="@drawable/icon_menu" />
-
-            <TextView
-                android:id="@+id/centerEt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="搜索框" />
-
-            <ImageView
-                android:id="@+id/rightIv"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/icon_micro" />
-
-        </RelativeLayout>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
@@ -58,7 +29,7 @@
             app:layout_constraintBottom_toTopOf="@id/playInfoRl"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/actionBar" />
+            app:layout_constraintTop_toBottomOf="@id/actionbar" />
 
         <RelativeLayout
             android:id="@+id/playInfoRl"
