--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     android:orientation="vertical"
     android:paddingTop="10dp"
-    tools:context=".activity.login.LoginActivity">
+    tools:context=".activity.LoginActivity">
 
     <include
         android:id="@+id/actionBar"
