--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="app_main">#ef0b18</color>
+    <color name="app_main_bg">#ececec</color>
 
     <color name="app_transparent">#00000000</color>
     <color name="alpha_ccffffff">#ccffffff</color>
@@ -20,9 +21,8 @@
     <color name="text_1d1d1d">#1d1d1d</color>
     <color name="text_323232">#323232</color>
     <color name="text_7c7c7c">#7c7c7c</color>
-    <color name="main_tab_unselected">#545454</color>
+    <color name="text_545454">#545454</color>
 
     <color name="bg_f8f8f8">#f8f8f8</color>
     <color name="bg_adadad">#adadad</color>
-    <color name="bg_ececec">#ececec</color>
 </resources>
