--- a/app/src/main/res/layout/discovery_banner_item.xml
+++ b/app/src/main/res/layout/discovery_banner_item.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginHorizontal="10dp">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
+            android:id="@+id/bannerImg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:background="@drawable/banner_background"/>
+            android:scaleType="centerCrop"/>
         <TextView
+            android:id="@+id/bannerType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="16sp"
-            android:padding="5dp"
+            android:textSize="10sp"
+            android:paddingHorizontal="5dp"
+            android:paddingVertical="2dp"
             android:text="独家"
             android:layout_gravity="bottom|right"
             android:background="@drawable/banner_type_background"/>
-
     </FrameLayout>
 
 </LinearLayout>
