--- a/app/src/main/res/layout/fragment_discover_layout.xml
+++ b/app/src/main/res/layout/fragment_discover_layout.xml
@@ -11,19 +11,23 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingHorizontal="20dp">
+            android:layout_height="match_parent">
 
-            <!--            <com.zhpan.bannerview.view.BannerViewPager-->
-            <!--                android:id="@+id/bannerView"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="180dp"-->
-            <!--                app:layout_constraintTop_toTopOf="parent" />-->
             <com.youth.banner.Banner
                 android:id="@+id/bannerView"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_height="130dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/discoverySecondModule"/>
+
+            <include
+                android:id="@+id/discoverySecondModule"
+                layout="@layout/discovery_second_module_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/bannerView">
+            </include>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
