--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="app_main">#ef0b18</color>
+    <color name="app_main_alpha">#33F1848A</color>
     <color name="app_main_bg">#ececec</color>
 
     <color name="app_transparent">#00000000</color>
