修改每日歌曲推荐UI

--- a/app/src/main/res/drawable-anydpi/icon_more.xml
+++ b/app/src/main/res/drawable-anydpi/icon_more.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="#545454"
+    android:width="16dp"
+    android:height="16dp"
+    android:viewportWidth="20"
+    android:viewportHeight="20"
+    android:tint="#7c7c7c"
     android:alpha="0.8">
   <path
       android:fillColor="@android:color/white"
