--- a/app/src/main/res/layout/recommend_songs_item_layout.xml
+++ b/app/src/main/res/layout/recommend_songs_item_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingHorizontal="10dp">
@@ -17,10 +18,10 @@
         android:id="@+id/songName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="说谎"
         android:textColor="@color/text_1d1d1d"
         android:textSize="13sp"
         android:layout_marginStart="5dp"
+        android:paddingVertical="2dp"
         app:layout_constraintStart_toEndOf="@id/songImg"
         app:layout_constraintTop_toTopOf="@id/songImg" />
 
@@ -28,12 +29,12 @@
         android:id="@+id/singerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="林宥嘉-说谎"
         android:textColor="@color/text_323232"
-        android:textSize="11sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@id/songImg"
         app:layout_constraintStart_toStartOf="@id/songName"
-        app:layout_constraintTop_toBottomOf="@id/songName" />
+        app:layout_constraintTop_toBottomOf="@id/songName"
+        tools:ignore="SmallSp" />
 
     <ImageView
         android:id="@+id/more"
