--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,5 @@
 
     <color name="bg_f8f8f8">#f8f8f8</color>
     <color name="bg_adadad">#adadad</color>
+    <color name="bg_c1c1c1">#c1c1c1</color>
 </resources>
