--- a/app/src/main/res/layout/normal_actionbar.xml
+++ b/app/src/main/res/layout/normal_actionbar.xml
@@ -9,7 +9,7 @@
         android:id="@+id/backIv"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:src="@drawable/icon_back"
+        android:src="@drawable/common_page_back_icon"
         android:layout_centerVertical="true"/>
 
     <TextView
