--- a/app/src/main/res/drawable-anydpi/common_arrow_up.xml
+++ b/app/src/main/res/drawable-anydpi/common_arrow_up.xml
@@ -3,14 +3,14 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#545454"
+    android:tint="#707070"
     android:alpha="0.8">
   <group android:scaleX="2"
       android:scaleY="2"
       android:translateX="-12"
-      android:translateY="-13">
+      android:translateY="-11">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M8.12,9.29L12,13.17l3.88,-3.88c0.39,-0.39 1.02,-0.39 1.41,0 0.39,0.39 0.39,1.02 0,1.41l-4.59,4.59c-0.39,0.39 -1.02,0.39 -1.41,0L6.7,10.7c-0.39,-0.39 -0.39,-1.02 0,-1.41 0.39,-0.38 1.03,-0.39 1.42,0z"/>
+        android:pathData="M8.12,14.71L12,10.83l3.88,3.88c0.39,0.39 1.02,0.39 1.41,0 0.39,-0.39 0.39,-1.02 0,-1.41L12.7,8.71c-0.39,-0.39 -1.02,-0.39 -1.41,0L6.7,13.3c-0.39,0.39 -0.39,1.02 0,1.41 0.39,0.38 1.03,0.39 1.42,0z"/>
   </group>
 </vector>
