--- a/app/src/main/res/layout/fragment_my_layout.xml
+++ b/app/src/main/res/layout/fragment_my_layout.xml
@@ -64,7 +64,7 @@
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/icon_right"
+            android:src="@drawable/common_arrow_right"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
