--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <color name="app_main">#ef0b18</color>
+    <color name="app_main">#d82818</color>
     <color name="app_main_alpha">#33F1848A</color>
     <color name="app_main_bg">#ececec</color>
 
