调整项目结构

--- a/app/src/main/res/layout/activity_recommend_perday.xml
+++ b/app/src/main/res/layout/activity_recommend_perday.xml
@@ -9,7 +9,7 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="@dimen/dp_180"
         android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -29,7 +29,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="@dimen/dp_60"
                 app:layout_collapseMode="pin" />
 
 
