--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -8,9 +8,9 @@
     tools:context=".activity.LauncherActivity">
 
     <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="150dp"
+        android:layout_width="@dimen/dp_70"
+        android:layout_height="@dimen/dp_70"
+        android:layout_marginTop="@dimen/dp_150"
         android:src="@mipmap/app_icon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -19,7 +19,7 @@
     <TextView
         android:id="@+id/loginByEmailTv"
         style="@style/LoginTextView"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="@dimen/dp_15"
         android:background="@drawable/login_by_email"
         android:text="@string/login_by_email"
         android:textColor="@color/app_main"
@@ -30,7 +30,7 @@
     <TextView
         android:id="@+id/loginByPhoneTv"
         style="@style/LoginTextView"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="@dimen/dp_120"
         android:background="@drawable/login_by_phone"
         android:text="@string/login_by_phone"
         android:textColor="@color/white"
@@ -41,21 +41,21 @@
         android:id="@+id/privacyLl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="@dimen/dp_30"
         android:orientation="horizontal"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <com.cvilia.netease.view.PrivacyCheckboxView
             android:id="@+id/checkBox"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:padding="8dp" />
+            android:layout_width="@dimen/dp_15"
+            android:layout_height="@dimen/dp_15"
+            android:padding="@dimen/dp_8" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:layout_marginLeft="5dp"
+            android:textSize="@dimen/sp_10"
+            android:layout_marginStart="@dimen/dp_5"
             android:textColor="@color/alpha_ccffffff"
             android:text="@string/privacy_and_agreement"
             />
