--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:paddingTop="10dp"
+    android:paddingTop="@dimen/dp_10"
     tools:context=".activity.LoginActivity">
 
     <include
@@ -17,8 +17,8 @@
         android:id="@+id/loginTypeTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_30"
         android:text="@string/login_by_phone"
         android:textColor="@color/black"
         android:textSize="18sp" />
@@ -26,34 +26,34 @@
     <com.cvilia.netease.view.UnderLineEditText
         android:id="@+id/accountEt"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/dp_40"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/dp_30"
         android:background="@null"
         android:hint="@string/please_input_phone"
         android:textColor="@color/black"
         android:textColorHint="@color/hint_c1c1c1"
-        android:textSize="14sp" />
+        android:textSize="@dimen/sp_14" />
 
     <com.cvilia.netease.view.UnderLineEditText
         android:id="@+id/passwordEt"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="@dimen/dp_40"
+        android:layout_marginHorizontal="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_30"
         android:background="@null"
         android:hint="@string/please_input_password"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/hint_c1c1c1"
-        android:textSize="14sp" />
+        android:textSize="@dimen/sp_14" />
 
     <Button
         android:id="@+id/loginBtn"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="@dimen/dp_40"
+        android:layout_marginHorizontal="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_30"
         android:background="@drawable/normal_red_round"
         android:text="@string/login"
         android:textColor="@color/white"
