--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="240dp"
-    android:layout_height="130dp"
+    android:layout_width="@dimen/dp_240"
+    android:layout_height="wrap_content"
     android:background="@drawable/permission_dialog"
-    android:gravity="center">
+    android:gravity="center"
+    android:minHeight="@dimen/dp_130">
 
     <ProgressBar
         android:id="@+id/progress"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_centerInParent="true" />
+        android:layout_width="@dimen/dp_40"
+        android:layout_height="@dimen/dp_40"
+        android:layout_centerHorizontal="true"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,6 +18,6 @@
         android:text="@string/please_waiting"
         android:textColor="@color/black"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="@dimen/dp_10"/>
 
 </RelativeLayout>
