--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="alpha">#cc000000</color>
+    <color name="complete_transparent">#00ffffff</color>
 
     <color name="divider_dadada">#dadada</color>
 
@@ -27,4 +28,5 @@
     <color name="bg_f8f8f8">#f8f8f8</color>
     <color name="bg_adadad">#adadad</color>
     <color name="bg_c1c1c1">#c1c1c1</color>
+    <color name="app_main_alpha_black">#dd000000</color>
 </resources>
