--- a/app/src/main/res/layout/actionbar_layout.xml
+++ b/app/src/main/res/layout/actionbar_layout.xml
@@ -2,34 +2,33 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
+    android:layout_height="@dimen/dp_45"
     android:background="@android:color/transparent"
-    android:paddingHorizontal="15dp">
+    android:paddingHorizontal="@dimen/dp_15">
 
     <ImageView
         android:id="@+id/actionLeft"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:src="@drawable/icon_menu"
+        android:layout_width="@dimen/dp_15"
+        android:layout_height="@dimen/dp_15"
+        android:src="@drawable/icon_menu_afafaf"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="35dp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_35"
         android:layout_marginHorizontal="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/actionRight"
-        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="@id/actionLeft"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/actionRight"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:src="@drawable/icon_micro"
+        android:layout_width="@dimen/dp_15"
+        android:layout_height="@dimen/dp_15"
+        android:src="@drawable/icon_micro_afafaf"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
