--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="LauncherTheme" parent="Theme.AppCompat.Light.NoActionBar">
+
+
+    <style name="LauncherTheme" parent="FullScreenTheme">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+
+    <style name="FullScreenTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimaryDark">@color/app_transparent</item>
         <item name="android:windowFullscreen">false</item>
         <item name="android:windowContentOverlay">@null</item>
@@ -15,7 +21,6 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:background">@color/app_transparent</item>
-        <item name="android:windowBackground">@drawable/splash</item>
         <item name="android:selectableItemBackground">@null</item>
     </style>
 
