修改发现页UI实现仿抖音一次只能滚动一个item效果

--- a/app/src/main/res/layout/fragment_discover_layout.xml
+++ b/app/src/main/res/layout/fragment_discover_layout.xml
@@ -9,13 +9,13 @@
     <include
         android:id="@+id/actionbar"
         layout="@layout/actionbar_layout"
-        app:layout_constraintBottom_toTopOf="@id/discoveryRecyclerView"
+        app:layout_constraintBottom_toTopOf="@id/tiktokRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/discoveryRecyclerView"
+        android:id="@+id/tiktokRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
