--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity"
+    android:fitsSystemWindows="true"
     android:background="@color/black">
 
     <androidx.viewpager2.widget.ViewPager2
